--- a/FlightSimulatorApp/FlightSimulatorApp.csproj
+++ b/FlightSimulatorApp/FlightSimulatorApp.csproj
@@ -40,6 +40,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -59,10 +61,13 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Models\ISimulatorModel.cs" />
-    <Compile Include="INotifyPropertyChanged.cs" />
-    <Compile Include="ITelnetClient.cs" />
+    <Compile Include="Models\INotifyPropertyChanged.cs" />
+    <Compile Include="Models\ITelnetClient.cs" />
     <Compile Include="Models\MySimulatorModel.cs" />
-    <Compile Include="MyTelnetClient.cs" />
+    <Compile Include="Models\MyTelnetClient.cs" />
+    <Compile Include="ViewModels\DashboardViewModel.cs" />
+    <Compile Include="ViewModels\JoystickViewModel.cs" />
+    <Compile Include="ViewModels\MapViewModel.cs" />
     <Compile Include="Views\Dashboard.xaml.cs">
       <DependentUpon>Dashboard.xaml</DependentUpon>
     </Compile>
@@ -115,9 +120,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ViewModels\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
