Add details file

--- a/FlightSimulatorApp/FlightSimulatorApp.csproj
+++ b/FlightSimulatorApp/FlightSimulatorApp.csproj
@@ -127,5 +127,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="etc.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
