--- a/FlightSimulatorApp/FlightSimulatorApp.csproj
+++ b/FlightSimulatorApp/FlightSimulatorApp.csproj
@@ -36,7 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Maps.MapControl.WPF">
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Bing Maps WPF Control\V1\Libraries\Microsoft.Maps.MapControl.WPF.dll</HintPath>
+      <HintPath>Lib\Microsoft.Maps.MapControl.WPF.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -154,6 +154,10 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="main_window_Background.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Lib\Microsoft.Maps.MapControl.WPF.dll" />
+    <Resource Include="Lib\Microsoft.Maps.MapControl.WPF.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
